<resources>
    <string name="app_name">萌宝铺子</string>
    <string name="unknow_version">未知版本</string>
    <string name="os_version_code">OS版本号</string>
    <string name="os_version_name">OS版本名</string>
    <string name="os_display_name">OS显示名</string>
    <string name="app_version_code">应用版本号</string>
    <string name="app_version_name">应用版本名</string>
    <string name="brand_info">品牌信息</string>
    <string name="model_info">设备信息</string>
    <string name="product_info">产品信息</string>
    <string name="manufacturer_info">制造商信息</string>

    <!--IM-->
    <string name="app_key">23348470</string>
    <string name="umeng_appkey">570f148c67e58edb70002040</string>
    <!--IM-->
    <string name="homepager">首页</string>
    <string name="homeshop">求购</string>
    <string name="homepublish">发布</string>
    <string name="homemessage">消息</string>
    <string name="homeme">我的</string>
    <string name="title_home_pager_title">萌宝铺子</string>
    <string name="home_head_tuijian">官方推荐</string>
    <string name="home_head_baobao">宝宝用品</string>
    <string name="home_head_mama">妈妈商品</string>
    <string name="home_head_jujia">居家商品</string>
    <string name="menu_search">搜索</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="app_label">搜索</string>
    <string name="menu_report">举报</string>
    <string name="quit_confirm">退出后您将收不到新消息通知，是否确认退出？</string>
    <string name="tip_deal_psw"><![CDATA[请去“我的”->\"我的钱包”->\"设置交易密码\"]]></string>
    <string name="tip_add_account">仅支持绑定实名认证的支付宝账号，绑定账号仅供提现使用，绑定支付宝账号之后不能修改</string>

    <string name="errcode_success" translatable="false">支付成功</string>
    <string name="errcode_cancel" translatable="false">您已取消支付</string>
    <string name="errcode_deny" translatable="false">发送被拒绝</string>
    <string name="errcode_unknown" translatable="false">发送返回</string>
    <string name="app_tip" translatable="false">提示</string>
    <string name="pay_result_callback_msg" formatted="false" translatable="false">微信支付结果：%s</string>
    <string name="title_payresult" translatable="false">支付结果</string>
    <string name="menu_add">添加</string>

</resources>
