<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_bottom"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_white_stroke_no_corner_dark"
    android:paddingBottom="1dp"
    android:paddingTop="2dp">

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_home_pager"
        android:gravity="center"
        android:text="@string/homepager"
        android:textColor="@color/selector_gray_to_primarycolor_text"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/tv_shop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_home_shop"
        android:gravity="center"
        android:text="@string/homeshop"
        android:textColor="@color/selector_gray_to_primarycolor_text"
        android:textSize="10sp"/>


    <TextView
        android:id="@+id/tv_publish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/homepublish"
        android:textColor="@color/selector_gray_to_primarycolor_text"
        android:textSize="10sp"/>


    <TextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_home_message"
        android:gravity="center"
        android:text="@string/homemessage"
        android:textColor="@color/selector_gray_to_primarycolor_text"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/tv_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_home_me"
        android:gravity="center"
        android:text="@string/homeme"
        android:textColor="@color/selector_gray_to_primarycolor_text"
        android:textSize="10sp"/>
</LinearLayout>

