<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/head01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_stroke_no_corner"
        android:orientation="horizontal"
        android:padding="@dimen/global_padding">

        <TextView
            android:id="@+id/tv_guanfangtuijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/half_global_padding"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:gravity="center"
            android:text="@string/home_head_tuijian" />

        <TextView
            android:id="@+id/tv_baobaoyongping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/half_global_padding"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:gravity="center"
            android:text="@string/home_head_baobao" />

        <TextView
            android:id="@+id/tv_mamashangping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/half_global_padding"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:gravity="center"
            android:text="@string/home_head_mama" />

        <TextView
            android:id="@+id/tv_jujiashangping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/half_global_padding"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:gravity="center"
            android:text="@string/home_head_jujia" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/head02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head01"
        android:background="@drawable/shape_white_stroke_no_corner"
        android:padding="@dimen/global_padding">

        <ImageView
            android:id="@+id/iv_head02"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:src="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/tv_head_zan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_head02"
            android:layout_toRightOf="@+id/iv_head02"
            android:background="@drawable/shape_color_stroke_corner"
            android:paddingBottom="2dp"
            android:paddingLeft="@dimen/half_global_padding"
            android:paddingRight="@dimen/half_global_padding"
            android:paddingTop="2dp"
            android:text="超赞"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tv_head_xin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_head02"
            android:layout_toRightOf="@+id/iv_head02"
            android:background="@drawable/shape_color_stroke_corner"
            android:paddingBottom="2dp"
            android:paddingLeft="@dimen/half_global_padding"
            android:paddingRight="@dimen/half_global_padding"
            android:paddingTop="2dp"
            android:text="最新"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tv_head_zan_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/tv_head_zan"
            android:lines="1"
            android:text="骄傲节是的发健康的是的就发空间是发的" />

        <TextView
            android:id="@+id/tv_head_xin_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_head02"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/tv_head_xin"
            android:lines="1"
            android:text="骄傲节是的发健康的是的就发空间是发的" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head02"
        android:padding="@dimen/global_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_new_store_tag"
            android:background="@color/darkgray" />

        <TextView
            android:id="@+id/tv_new_store_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="最新商品"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_new_store_tag"
            android:background="@color/darkgray" />
    </RelativeLayout>

</RelativeLayout>